--- a/SafeMvcUrls/SafeMvcUrls.nuspec
+++ b/SafeMvcUrls/SafeMvcUrls.nuspec
@@ -8,10 +8,10 @@
 	Jens Theisen
 	</authors>
     <owners>Jens Theisen</owners>
-    <!--<projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>-->
+    <projectUrl>https://github.com/jtheisen/safe-mvc-urls</projectUrl>
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Use "@(Url.To&lt;MyController>().MyAction(someparam: "somevalue"))" to create your urls in a type- and name-safe manner - both in views and controllers.</description>
+    <description>Use "@(Url.To&lt;MyController>().MyAction(someparam: "somevalue"))" to create your urls in a type- and name-safe manner - both in views and controllers. See the project page for a quick introduction.</description>
     <!--<releaseNotes>Summary of changes made in this release of the package.</releaseNotes>-->
     <copyright>Copyright 2014 MonkeyBusters</copyright>
     <tags>monkeybusters urls mvc</tags>
