--- a/SafeMvcUrls/SafeMvcUrls.nuspec
+++ b/SafeMvcUrls/SafeMvcUrls.nuspec
@@ -2,8 +2,8 @@
 <package >
   <metadata>
     <id>MonkeBusters.Web.Mvc.SafeUrls</id>
-    <version>1.0.0</version>
-    <title>Safe urls with ASP.NET MVC</title>
+    <version>1.0.1</version>
+    <title>SafeMvcUrls</title>
 	<authors>
 	Jens Theisen
 	</authors>
@@ -11,9 +11,10 @@
     <projectUrl>https://github.com/jtheisen/safe-mvc-urls</projectUrl>
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Use "@(Url.To&lt;MyController>().MyAction(someparam: "somevalue"))" to create your urls in a type- and name-safe manner - both in views and controllers. See the project site for a quick introduction.</description>
-    <!--<releaseNotes>Summary of changes made in this release of the package.</releaseNotes>-->
+    <summary>Type- and name-safe urls with ASP.NET MVC.</summary>
+	<description>Use "@(Url.To&lt;MyController>().MyAction(someparam: "somevalue"))" to create your urls in a type- and name-safe manner - both in views and controllers. See the project site for a quick introduction.</description>
+    <releaseNotes>Title-, description- and tag-changes only.</releaseNotes>
     <copyright>Copyright 2014 MonkeyBusters</copyright>
-    <tags>monkeybusters urls mvc</tags>
+    <tags>monkeybusters safemvcurls safeurls urls mvc</tags>
   </metadata>
 </package>
