--- a/SafeMvcUrls/SafeMvcUrls.nuspec
+++ b/SafeMvcUrls/SafeMvcUrls.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>MonkeBusters.Web.Mvc.SafeUrls</id>
-    <version>1.0.1</version>
+    <version>1.1.0-alpha</version>
     <title>SafeMvcUrls</title>
 	<authors>
 	Jens Theisen
@@ -13,8 +13,8 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>Type- and name-safe urls with ASP.NET MVC.</summary>
 	<description>Use "@(Url.To&lt;MyController>().MyAction(someparam: "somevalue"))" to create your urls in a type- and name-safe manner - both in views and controllers. See the project site for a quick introduction.</description>
-    <releaseNotes>Title-, description- and tag-changes only.</releaseNotes>
+    <releaseNotes>Support for MVC Areas</releaseNotes>
     <copyright>Copyright 2014 MonkeyBusters</copyright>
-    <tags>monkeybusters safemvcurls safeurls urls mvc</tags>
+    <tags>monkeybusters safemvcurls safemvc safeurls urls mvc</tags>
   </metadata>
 </package>
