--- a/SafeMvcUrls/SafeMvcUrls.nuspec
+++ b/SafeMvcUrls/SafeMvcUrls.nuspec
@@ -1,9 +1,12 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>MonkeyBusters.Web.Mvc.SafeUrls</id>
-    <version>1.1.0-alpha</version>
+    <version>1.1.2-alpha</version>
     <title>SafeMvcUrls</title>
+    <dependencies>
+      <dependency id="Castle.Core" version="3.1.0" />
+    </dependencies>
 	<authors>
 	Jens Theisen
 	</authors>
